# Backend-Progress

./: .gitignore  README.md  pyproject.toml
MongoDB_Simple_CRUD/: main.py
MongoDB_Simple_CRUD/config/: db_connection.py
Mongo_Group_Routing/: main.py
Mongo_Group_Routing/config/: db_connection.py
Mongo_Group_Routing/routes/: one_database.py
