[project]
name = "test-mongo"
version = "0.1.0"
description = ""
authors = [
    {name = "hussainahmad402",email = "hussainahmad9402@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.11.2,<5.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
